<resources>
    <string name="app_name">Covid-19</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pacientes">pacientes</string>
    <string name="Pacientes">Pacientes</string>
    <string name="Página_Inicial">Página Inicial</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">cancelar</string>
    <string name="_26_06_1994">26/06/1994</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eliminar">eliminar</string>
    <string name="nova_local">nova_local</string>
    <string name="alterar_local">alterar_local</string>
    <string name="eliminar_local">eliminar_local</string>
    <string name="versao">Projeto v1.0</string>
    <string name="novo_paciente">novo_paciente</string>
    <string name="alterar_paciente">alterar_paciente</string>
    <string name="eliminar_paciente">eliminar_paciente</string>
    <string name="codigo_postal">Codigo Postal</string>
    <string name="nome">Nome</string>
    <string name="data_vacina">Data Vacina</string>
    <string name="local">local</string>
    <string name="Local">Local</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="vacina">vacina</string>
    <string name="numero_utente">Numero Utente</string>
    <string name="data">Data</string>
    <string name="nova_vacina">nova_vacina</string>
    <string name="alterar_vacina">alterar_vacina</string>
    <string name="eliminar_vacina">eliminar_vacina</string>
    <string name="Elimina_Vacina">Eliminar Vacina</string>
    <string name="Elimina_paciente">Eliminar Paciente</string>
    <string name="Elimina_local">Eliminar Local</string>
    <string name="Editar_local">Editar Local</string>
    <string name="Editar_paciente">Editar Paciente</string>
    <string name="Novo_Paciente">Novo Paciente</string>
    <string name="Novo_Local">Novo Local</string>
    <string name="Nova_Vacina">Nova Vacina</string>
    <string name="Editar_Vacina">Editar Vacina</string>
    <string name="covid19">Covid 19</string>
    <string name="vacinas">vacinas</string>
    <string name="Vacinas">Vacinas</string>
</resources>