<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FragmentPaginaInicial">


    <Button
        android:id="@+id/buttonPacientes"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:text="@string/pacientes"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="@+id/buttonVacinas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonVacinas" />

    <Button
        android:id="@+id/buttonLocal"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:text="@string/local"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="@+id/buttonVacinas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonVacinas" />

    <Button
        android:id="@+id/buttonVacinas"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:text="@string/vacinas"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonLocal"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/buttonPacientes"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPaginaInicial"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/textViewPaginaInicial"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_margin="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center|top"
        android:text="@string/covid19"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewPaginaInicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewPaginaInicial"
        android:layout_width="219dp"
        android:layout_height="189dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/_2277"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />
</androidx.constraintlayout.widget.ConstraintLayout>